@@ -1,3 +1,10 @@
+2008-03-01  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
+
+	* sys/dvb/gstdvbsrc.c:
+	* sys/dvb/parsechannels.c:
+	Add DVB-C support. Special thanks to Christian Schaller
+	for a testing ground.
+
 2008-02-28  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
 
 	* gst/mpegtsparse/mpegtsparse.c:
